--- a/public/css/style.css
+++ b/public/css/style.css
@@ -70,6 +70,11 @@ p {
   color: #d6d6d6;
   text-align: left;
 }
+
+whitetext{
+  color:white;
+}
+
 .button {
   display: inline-block;
   margin-top: 40px;
