--- a/public/css/style.css
+++ b/public/css/style.css
@@ -681,9 +681,9 @@ input.sp-selector-5:checked ~ .sp-content .sp-slider > li:nth-child(5){
 .parlex2-back {
   padding-top: 15px;
   background-color: transparent;
-  background-image: -webkit-linear-gradient(#0ac791, #00c788);
-  background-image: -o-linear-gradient(#0ac791, #00c788);
-  background-image: linear-gradient(#0ac791, #00c788);
+  background-image: -webkit-linear-gradient(	#7a7269, #7a7269);
+  background-image: -o-linear-gradient(	#7a7269, #7a7269);
+  background-image: linear-gradient(	#7a7269, #7a7269);
 }
 .process-text {
   display: block;
@@ -701,9 +701,9 @@ input.sp-selector-5:checked ~ .sp-content .sp-slider > li:nth-child(5){
 .parlex3-back {
   padding-top: 15px;
   background-color: transparent;
-  background-image: -webkit-linear-gradient(rgba(128, 125, 155, 0.99), rgba(128, 125, 155, 0.78));
-  background-image: -o-linear-gradient(rgba(128, 125, 155, 0.99), rgba(128, 125, 155, 0.78));
-  background-image: linear-gradient(rgba(128, 125, 155, 0.99), rgba(128, 125, 155, 0.78));
+  background-image: -webkit-linear-gradient(rgba(111,78,55 0.99), rgba(128, 125, 155, 0.78));
+  background-image: -o-linear-gradient(rgba(111,78,55 0.99), rgba(128, 125, 155, 0.78));
+  background-image: linear-gradient(rgba(111,78,55 0.99), rgba(128, 125, 155, 0.78));
 }
 
 /* portfolio */
@@ -841,7 +841,7 @@ box-shadow: 5px 5px 0px #20AE61;
   color: white;
 }
 .portfolio-heading {
-  color: white;
+  color: black;
 }
 .parlex4 {
   background-image: none;
@@ -1186,7 +1186,7 @@ box-shadow: 5px 5px 0px #20AE61;
 }
 .about-parlex {
   padding-top: 15px;
-  background-color: #7d899b;
+  background-color: #6f4e37;
 }
 .parlex8-back {
   padding-top: 15px;
